--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landing-page-cv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chjesus.github.io/",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@n8tb1t/use-scroll-position": "^2.0.3",
@@ -24,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
