--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.16.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
