--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
