--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
     "antd": "^4.16.0",
+    "axios": "^0.21.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
