--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/styled-components": "^5.1.9",
     "antd": "^4.16.0",
     "axios": "^0.21.1",
+    "i18next": "^20.3.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-typed": "^1.2.0",
