--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chjesus.github.io/",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,6 +15,7 @@
     "@types/styled-components": "^5.1.9",
     "antd": "^4.16.0",
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
     "i18next": "^20.3.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
@@ -32,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
